# ShipCorpDisigen

./: .gitignore  CMakeLists.txt  README.md
BackEnd_App/: DrowerComander.h  FileManipulation.cpp  FileManipulation.h  ShipModel.cpp  ShipModel.h  ShipSection.cpp  ShipSection.h
UI_App/: CMakeLists.txt  CordLineEdit.cpp  CordLineEdit.h  CuttingPlaneSettingsWdgt.cpp  CuttingPlaneSettingsWdgt.h  CuttingPlanesWdgt.cpp  CuttingPlanesWdgt.h  CuttingTools.cpp  CuttingTools.h  DialogWdgt.cpp  DialogWdgt.h  DialogWindow.cpp  DialogWindow.h  DrawingWdgt.cpp  DrawingWdgt.h  MainWnd.cpp  MainWnd.h  MainWnd.qrc  MainWnd.ui  OZDialog.cpp  OZDialog.h  PointsWdgt.cpp  PointsWdgt.h  README.md  SectionCordsWdgt.cpp  SectionCordsWdgt.h  SplinesList.cpp  SplinesList.h  Vision3DView.cpp  Vision3DView.h  controller.cpp  controller.h  customTreeItem.cpp  customTreeItem.h  main.cpp  ui_MainWnd.h
UI_App/Icons/: sectionplane.c3d
